refactored application frame, refactored model